project copy updated

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/susanta.chakraborty/viz/AirbnbRevenueAnalysis_17125964733820/Dashboard1" class="image fit"><img src="images/Tableau-Emblem.png" alt="" /></a>
-									<p>This contains Tableau visualisation </p>
+									<p>This contains Tableau visualisation on Airbnb data </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/susanta.chakraborty/viz/AirbnbRevenueAnalysis_17125964733820/Dashboard1" class="button">PROJECT VIEWING</a></li>
 									</ul>
@@ -117,11 +117,11 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://github.com/Susanta-Analyst/Python-Projects">Python Projects with BMI Calculators and File Sorting<br />
+										<h2><a href="https://github.com/Susanta-Analyst/Python-Projects">Python Projects <br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Susanta-Analyst/Python-Projects" class="image fit"><img src="images/Python.cms" alt="" /></a>
-									<p>The projects involve creation of a BMI Calculator for detecting Body Mass Index and aditionally File Sorting on text,csv and png files.</p>
+									<p>The projects involve creation of a BMI Calculator for detecting Body Mass Index and File Sorting on text,csv and png files. Additionally two other projects have been done on Amazon Web Scrapping and Crypto Currency</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Susanta-Analyst/Python-Projects" class="button">Project Viewing</a></li>
 									</ul>
